# project-step-3-andrewyang0620

./: .coverage  .gitignore  LICENSE  README.md  coverage.ini  pyproject.toml
.github/workflows/: main.yml
src/QuizzingApp/: __init__.py  errors.py  main.py
src/QuizzingApp/data/: questions.json  sessions.json  users.json
src/QuizzingApp/questionbase/: question.py  question_manager.py
src/QuizzingApp/quizsession/: result.py  session.py
src/QuizzingApp/userprofile/: manage_user.py  user.py
src/QuizzingAppPackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_question.py  test_question_manager.py  test_result.py  test_session.py  test_suite.py  test_user.py  test_user_manager.py
