[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "QuizzingAppPackage"
version = "0.1.0"
description = "A command-line quizzing application"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jingtao Yang", email = "yangjingtaoitb@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ubco-mds-2025-labs/project-step-3-andrewyang0620"